--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 .kotlin
+.idea/
 
 ### Eclipse ###
 .apt_generated
@@ -25,6 +26,9 @@ bin/
 
 ### VS Code ###
 .vscode/
-.idea/
+
 ### Mac OS ###
 .DS_Store
+.idea/.gitignore
+.gitignore
+.idea/vcs.xml
